added menu and pause. changed speed of obstacles.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Operation Doomsday</title>
   </head>
   <body>
-        <div>
-
+        <div class="menu">
+        
         </div>
-
+          
         <div>
             <h1>Doom</h1>
             <script src="/js/obstacle.js"></script>
