--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"
       rel="stylesheet"/>
-    <link rel="stylesheet" href="/sytles.css" />
+    <link rel="stylesheet" href="sytles.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+    <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/addons/p5.sound.min.js"></script>
     <title>Operation Doomsday</title>
   </head>
-  <body>
-        <div class="menu">
-        
-        </div>
-          
+  <body>  
         <div>
-            <h1>Doom</h1>
-            <script src="/js/obstacle.js"></script>
-            <script src="/js/token.js"></script>
-            <script src="/js/background.js"></script>
-            <script src="/js/player.js"></script>
-            <script src="/js/game.js"></script>
-            <script src="/js/main.js"></script>
+            <script src="js/obstacle.js"></script>
+            <script src="js/token.js"></script>
+            <script src="js/background.js"></script>
+            <script src="js/player.js"></script>
+            <script src="js/hostage.js"></script>
+            <script src="js/jail.js"></script>
+            <script src="js/game.js"></script>
+            <script src="js/main.js"></script>
         </div>
   </body>
 </html>
