--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"
-      rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sytles.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/addons/p5.sound.min.js"></script>
     <title>Operation Doomsday</title>
   </head>
   <body>  
+    <span class="blink">Operation Doomsday</span>
         <div>
             <script src="js/obstacle.js"></script>
             <script src="js/token.js"></script>
+            <script src="js/lives.js"></script>
             <script src="js/background.js"></script>
             <script src="js/player.js"></script>
             <script src="js/hostage.js"></script>
